--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@visx/axis": "^1.7.0",
+    "@visx/grid": "^1.7.0",
+    "@visx/group": "^1.7.0",
+    "@visx/legend": "^1.7.0",
+    "@visx/responsive": "^1.7.0",
+    "@visx/scale": "^1.7.0",
+    "@visx/shape": "^1.7.0",
+    "@visx/tooltip": "^1.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
