--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@visx/axis": "^1.7.0",
+    "@visx/curve": "^1.7.0",
+    "@visx/gradient": "^1.7.0",
     "@visx/grid": "^1.7.0",
     "@visx/group": "^1.7.0",
     "@visx/legend": "^1.7.0",
+    "@visx/marker": "^1.7.0",
+    "@visx/mock-data": "^1.7.0",
+    "@visx/react-spring": "^1.7.0",
     "@visx/responsive": "^1.7.0",
     "@visx/scale": "^1.7.0",
     "@visx/shape": "^1.7.0",
@@ -17,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
