--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@visx/responsive": "^1.7.0",
     "@visx/scale": "^1.7.0",
     "@visx/shape": "^1.7.0",
+    "@visx/threshold": "^1.7.0",
     "@visx/tooltip": "^1.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
